2007-06-13  Jb Evain  <jbevain@novell.com>

	Integrated patches by:
	Paul Apostolescu <papostolescu@fortifysoftware.com>

	* patch4:
	  Mono.Cecil/ReflectionHelper.cs:
		Update the value type flags of types
		when they are imported if the type
		reference was first seen as a type reference.

	* patch2:
	  Mono.Cecil.Signature/SignatureWriter.cs:
		Patch to handle nullref values for types in
		custom attributes arguments.

2007-06-13  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/StructureWriter.cs,
	  Mono.Cecil/ReflectionWriter.cs:
		Revert the on demand creation of memberref.

2007-06-12  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/CallSite.cs
	  Mono.Cecil/ModuleReference.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/AssemblyDefinition.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/AssemblyNameReference.cs
	  Mono.Cecil/MemberReference.cs
	  Mono.Cecil/Resource.cs
	  Mono.Cecil/ParameterReference.cs:
		Implement explicitely IAnnotationProvider.

2007-06-05  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/AssemblyNameReference.cs:
		Cache the fullname when possible.

2007-05-31  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ModuleDefinition.cs:
		Add types to the module and members to the context
		on inject.

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Improve resolve, works for people requiring
		.net 1.0 assemblies when they only have 1.1.

2007-05-30  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/DefaultAssemblyResolver.cs:
		Add a RegisterAssembly method to register an
		assembly to the cache without having to resolve it.

	* Mono.Cecil/DefaultReferenceImporter.cs:
		Make methods virtual.

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  Mono.Cecil/ReflectionHelper.cs
	  Mono.Cecil/IReferenceImporter.cs
	  Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/ImportContext.cs
	  Mono.Cecil/NullReferenceImporter.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ReflectionController.cs